--- a/encrypt-service/build.gradle
+++ b/encrypt-service/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation "io.micronaut:micronaut-runtime"
     implementation "io.micronaut:micronaut-http-server-netty"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
+    testCompile "io.micronaut.test:micronaut-test-spock:1.0.0.RC2"
+    compile "io.micronaut:micronaut-discovery-client"
     testAnnotationProcessor platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation("org.spockframework:spock-core") {
